cleaning everything up, ready to start writing and then responsive design

--- a/src/routes/docs/layout.css
+++ b/src/routes/docs/layout.css
@@ -13,7 +13,7 @@ h1 {
 }
 
 h2 {
-	margin-top: 30px;
+	margin-top: 26px;
 	font-size: 30px;
 }
 
@@ -27,4 +27,8 @@ a {
 	display: inline-block;
 	text-decoration: underline;
 	text-decoration-style: wavy;
+}
+
+a:hover {
+	transform: scale(1.02) rotate(-0.7deg);
 }
