--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -1,5 +1,9 @@
 @import 'tailwindcss';
 
+@theme {
+	--breakpoint-lg: 1060px;
+}
+
 @font-face {
 	font-family: 'PhantomSans';
 	src: url('/fonts/PhantomSans_Bold.woff') format('woff');
@@ -38,7 +42,6 @@ body {
 	height: 288px;
 	background-size: contain;
 	background-repeat: no-repeat;
-	background-color: white;
 }
 
 .button {
